--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,5 @@
 //Values
-$navbar-height: 50px;
+$navbar-height: 55px;
 $hero-height: 120px;
 $blue-section-height: 170px;
 $yellow-section-height: 170px;
@@ -23,127 +23,100 @@ $medium: 1080px;
 $large: 1400px;
 $xlarge: 1920px;
 
-html, body{
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-}
 
-.container{
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-.container h1{
-    color: $rouge;
-    text-align: center;
-}
-
-.container img{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-}
-
-
-.navbar{
-    width: 100%;
-    height: $navbar-height;
-    background-color:$noir;
-}
-
-.footer{
-    width: 100%;
-    height: $footer-height;
-    background-color:$noir;
-}
-
-.hero{
-    width: 100%;
-    height: $hero-height;
-    background-color: $rouge;
-}
-
-.blue-section{
-    width: 100%;
-    height: $blue-section-height;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    @media screen and (max-width: $medium) {flex-direction: column;}
-
-    .bs-bloc{
-        flex:1;
+  
+    html, body{
+        padding: 0;
+        margin: 0;
         width: 100%;
-        height: 170px;
-        
-        &.light-blue{
-            background-color: lighten($color: $bleu, $amount: 10);
-        }
-
-        &.dark-blue{
-            background-color: darken($color: $bleu, $amount:  40);
-        }
+        height: 100%;
     }
-
     
-}
 
-.yellow-section{
-    width: 100%;
-    height: $yellow-section-height;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    .bs-bloc{
-        flex:1;
+    .navbar{
+        display: flex;
+        flex-direction: row;
         width: 100%;
-        height: 170px;
-        
-        &.light-yellow{
-            background-color: lighten($color: $jaune, $amount: 10);
+        position:fixed;
+        bottom:0;
+        border-top:1px solid rgb(174, 174, 179);
+        height: $navbar-height;
+        text-align: center;
+
+        @media only screen and (max-width: $small) {
+            img{
+                display: none;
+            }
         }
 
-        &.dark-yellow{
-            background-color: darken($color: $jaune, $amount:  10);
+
+        .icon{
+            width: 100%;
+            margin-top:10px;
+
+            p {
+                margin:0;
+                font-family: Andale Mono, monospace;
+            }
+
+            i {
+                color: $noir;
+            }
+
+            
         }
+
     }
 
+
+    @media only screen and (min-width: $medium) {
+
+        .navbar{
+            top:0;
+            border-bottom:1px solid rgb(174, 174, 179);
+            background-color: #31306d;
+            align-items: center;
+
+            img{
+                padding-left: 20px;
+            }
+            
+            .nav{
+                width: auto;
+                display: flex;
+                margin-left: auto;
+                flex: none;
+            }
     
-}
+            .icon{
+                margin:0;
+                padding-right: 20px;
+                width: auto;
 
-.grey-section{
-    width: 100%;
-    height: $grey-section-height;
-    display: flex;
-    flex-wrap: wrap;
-    @media (max-width: $medium) {
-        flex-direction: column; 
-    }
-    .bs-bloc{
-        flex:1;
-        height: 170px;
-        @media (max-width: $medium) and (min-width: $small) {
-            flex: 0 0 50%;
-            flex-wrap: wrap;
-        }   
 
-        &.light-grey{
-            background-color: lighten($color: $gris, $amount: 10);
-        }
-
-        &.normal-grey{
-            background-color: $gris;
-        }
-
-        &.dark-grey{
-            background-color: darken($color: $gris, $amount:  40);
-        }
-    }
+                p {
+                    color: #D3D3D3;
+                }
     
-}
+                i {
+                    display: none;
+                }
+    
+                
+            }
+    
+        }
+
+       }
+
+
+
+
+
+
+
+
+
+
 
 
