--- a/main.scss
+++ b/main.scss
@@ -34,6 +34,7 @@ $xlarge: 1920px;
     
 
     .navbar{
+        position: relative;
         flex-direction: row;
         width: 100%;
         position:fixed;
@@ -42,15 +43,13 @@ $xlarge: 1920px;
         height: $navbar-height;
         text-align: center;
 
-        @media only screen and (max-width: $small) {
-            img{
-                display: none;
-            }
-        }
+    }
+
+
 
         .nav {
                 display: flex;
-                justify-content: space-around;;
+                justify-content: space-around;
             }
 
 
@@ -70,8 +69,149 @@ $xlarge: 1920px;
             
         }
 
+
+
+
+
+    footer {
+        position:relative;
+        bottom:0;
+        width:100%;
+        background-color: #72718a;
+        font-family: Arial, Helvetica, sans-serif;
+
+        .title{
+            color: #F0E36B;
+            text-align: center;
+            text-decoration: underline;
+        }
+
+        .foot{
+            display: flex;
+            justify-content: space-around;
+
+            a{
+                color: #F0E36B;
+            }
+        }
+
+        .last{
+            display: flex;
+            justify-content: space-between;
+
+            .tel{
+                padding-left: 30px;
+                display: flex;
+                
+            }
+
+            .socials{
+                padding-right: 30px;
+                
+            }
+        }
+
+        p{
+            color: $gris;
+        }
+
+        h3{
+            color: white;
+        }
+
     }
 
+    
+    .bloc1{
+        
+        img{
+            border-radius: 4px;
+        }
+
+        h3{
+            color: #3d466b;
+        }
+        p{
+            color:#575757;
+        }
+        padding-top: 100px;
+        padding-bottom: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .bloc2{
+        img{
+            border-radius: 4px;
+        }
+
+        h3{
+            color: #3d466b;
+        }
+        p{
+            color:#575757;
+        }
+        padding-top: 15px;
+        padding-bottom: 30px;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-around;
+    }
+
+
+    @media only screen and (max-width: $small) {
+            
+        .navbar{
+            img{
+                display: none;
+            }
+        }
+
+            .container{
+
+                display: none;
+
+            }
+
+            .bloc1{
+                img{
+                    border-radius: 4px;
+                }
+        
+                h3{
+                    color: #3d466b;
+                }
+                p{
+                    color:#575757;
+                }
+                padding-left: 20%;
+                padding-top: 10px;
+                padding-bottom: 25px;
+                flex-direction: column;
+                justify-content: space-around;
+            }
+        
+            .bloc2{
+                img{
+                    border-radius: 4px;
+                }
+        
+                h3{
+                    color: #3d466b;
+                }
+                p{
+                    color:#575757;
+                }
+                padding-left: 20%;
+                padding-top: 10px;
+                padding-bottom: 25px;
+                flex-direction: column-reverse;
+                justify-content: space-around;
+            }
+
+
+        }
 
     @media only screen and (min-width: $medium) {
 
@@ -79,7 +219,7 @@ $xlarge: 1920px;
             display: flex;
             top:0;
             border-bottom:1px solid rgb(174, 174, 179);
-            background-color: #31306d;
+            background-color: #72718a;
             align-items: center;
 
             img{
@@ -109,10 +249,16 @@ $xlarge: 1920px;
     
                 
             }
+
     
         }
 
        }
+
+
+
+
+
 
 
 
